--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ image:
 cache:
   - downloads -> appveyor.yml
   - '%LOCALAPPDATA%\pip\Cache'
-  - /var/cache/apt/archives -> appveyor.yml
+  - /var/cache/apt/archives
   - C:\ProgramData\chocolatey\bin -> appveyor.yml
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 
