set JAVA_OPTIONS

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,7 +45,7 @@ install:
   - sh: STATIC_DEPS=true & python$PYTHON -m pip install --user -U lxml
   - sh: ./.travis/install.sh
   # java 9 and greater prints to stderr when this is set, failing several java tests
-  - sh: unset JAVA_TOOL_OPTIONS 
+  - sh: export JAVA_TOOL_OPTIONS=
   # workaround for https://github.com/codecov/codecov-python/pull/188
   - sh: export CI=True
   - sh: export APPVEYOR=True
