--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -219,10 +219,10 @@ on_success:
   - cmd: if %COVERAGE% equ 1 coverage combine
   - cmd: if %COVERAGE% equ 1 coverage report
   - cmd: if %COVERAGE% equ 1 coverage xml -o coverage_xml.xml
-  - cmd: if %COVERAGE% equ 1 coveralls --rcfile="%COVERAGE_PROCESS_START%"
-  - cmd: if %COVERAGE% equ 1 codecov -t %CODECOV_TOKEN% --file coverage_xml.xml
+  #- cmd: if %COVERAGE% equ 1 coveralls --rcfile="%COVERAGE_PROCESS_START%"
+  - cmd: if %COVERAGE% equ 1 codecov --file coverage_xml.xml
   - sh: if [ "$COVERAGE" -eq "1" ]; then coverage combine; fi
   - sh: if [ "$COVERAGE" -eq "1" ]; then coverage report; fi
   - sh: if [ "$COVERAGE" -eq "1" ]; then coverage xml -o coverage_xml.xml; fi
-  - sh: if [ "$COVERAGE" -eq "1" ]; then coveralls --rcfile="$COVERAGE_PROCESS_START"; fi
-  - sh: if [ "$COVERAGE" -eq "1" ]; then codecov -t $CODECOV_TOKEN --file coverage_xml.xml; fi
+  #- sh: if [ "$COVERAGE" -eq "1" ]; then coveralls --rcfile="$COVERAGE_PROCESS_START"; fi
+  - sh: if [ "$COVERAGE" -eq "1" ]; then codecov --file coverage_xml.xml; fi
