--- a/test/Decider/MD5-winonly-fixture/SConstruct
+++ b/test/Decider/MD5-winonly-fixture/SConstruct
@@ -5,5 +5,6 @@ env.AppendENVPath('PATH', r'd:\mesa\flexbison')
 env.Tool('lex')
 env.Tool('yacc')
 env['YACCFLAGS'] = '-d'
-env.Append(LEXFLAGS = ['--wincompat'])
+if env['YACC'] == 'win_flex':
+    env.Append(LEXFLAGS = ['--wincompat'])
 env.SharedLibrary('dummy',['test_lex.l','test_parse.y'])
