[WIP] Experiment with travis provisioning
Do not merge as is - this commit drops appveyor config to speed up
testing turnaround.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ os:
   - linux
 
 install:
+    - pip install lxml
     - ./.travis/install.sh
 
 # pypy is not passing atm, but still report build success for now
