Update Travis config: py38, lxml, docbook, ldc
Py3.8 taken off "allowed to fail" list
xml installed in the Python virtualenv context, not the distro
  context (else won't be found)
Provision with a couple of additional docbook pkgs
Bump the version of the reference D compiler to current.

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ os:
   - linux
 
 install:
+  # needed for Docbook tests, must be in virtualenv context
+  - pip install lxml
+  # do the rest of the image setup
   - ./.travis/install.sh
 
 # pypy is not passing atm, but still report build success for now
@@ -21,7 +24,6 @@ matrix:
   allow_failures:
     - python: pypy
     - python: pypy3
-    - python: 3.8-dev
     - stage: Coverage
 
 # run coverage first as its still useful to collect
