pin libxml so it should build with py3.8

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ os:
 
 install:
   # needed for Docbook tests, must be in virtualenv context
-  - pip install lxml
+  - pip install lxml==4.3.3
   # do the rest of the image setup
   - ./.travis/install.sh
 
