do some debugging on tar bz2 and xz formats
Don't merge this one: it has debug stuff in it,
and eliminates most appveyor builds

Signed-off-by: Mats Wichmann <mats@linux.com>

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -143,12 +143,18 @@ matrix:
       WINPYTHON: "Python36"
     - image: Visual Studio 2015
       WINPYTHON: "Python37"
+    # quick test: skip all
+    - image: Visual Studio 2015
+      WINPYTHON: "Python35"
 
     # test python 2.7, 3.6 on Visual Studio 2017 image
     - image: Visual Studio 2017
       WINPYTHON: "Python35"
     - image: Visual Studio 2017
       WINPYTHON: "Python37"
+    # quick test: skip 2.7 as well
+    - image: Visual Studio 2017
+      WINPYTHON: "Python27"
 
     # test python 3.7 on Visual Studio 2019 image
     - image: Visual Studio 2019
