--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 doc/* linguist-documentation
 src/engine/SCons/Tool/docbook/docbook-xsl-1.76.1 linguist-vendored
 *.xml linguist-documentation
+*.xsl linguist-documentation
 *.gen linguist-documentation
 
